data/all_generated_tests/raw_wast_tests/loop_MismanagementofBlockNesting_659.wast
;; 10. **Test Description**: Nested `loop` and conditional branches with deliberate misalignment in nesting scope designed to highlight logical branching errors.    - **Constraint Checked**: Highlights correctness in understanding and managing `br_if` and `br` within nested loops.    - **Relation to Mismanagement of Block Nesting**: Testing improper implementation of control flow logic in structurally complex scenarios leading to mismanaged control flow.

(assert_invalid
  (module
    (func $nested-loop-branching
      (i32.const 0)
      (i32.const 1)
      (loop (result i32)
        (br_if 1)  ; Correctly branches out of the loop
        (loop
          (br_if 2 (i32.const 1))  ; Deliberately incorrect: Attempts to branch out of nested loop improperly
        )
        (i32.add)  ; Should never reach here if branch is correct
      )
    )
  )
  "invalid branch target"
)